2009-07-06  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc: Delete stray CR.

2009-07-05  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler_console.cc: Change workstation -> windows station
	throughout.

2009-07-04  Christopher Faylor  <me+cygwin@cgf.cx>

	* autoload.cc (SetParent): Add new import.
	* fhandler.h (fhandler_console::create_invisible_console): Declare new
	function.
	(create_invisible_console_workaround): Ditto.
	* fhandler_console.cc (fhandler_console::create_invisible_console):
	Define new function.
	(create_invisible_console_workaround): Ditto.  Add too much code to
	deal with broken Windows 7.  Use a helper app to start an invisible
	console window.
	(fhandler_console::need_invisible): Reorganize to use helper functions
	to create invisible console.

	* spawn.cc (spawn_guts): Avoid zeroing already zeroed fields in si.

2009-07-04  Dave Korn  <dave.korn.cygwin@gmail.com>

	* autoload.cc (AttachConsole):  Correct size of args.

2009-07-03  Christopher Faylor  <me+cygwin@cgf.cx>

	* dcrt0.cc (jit_debug): New global.
	(initial_env): Set jit_debug when we are automatically starting a gdb
	process.
	* dtable.cc (dtable::get_debugger_info): Don't tty tricks when we are
	being debugged by our own captive gdb, as determined by jit_debug ==
	true.
	(dtable::init_std_file_from_handle): Detect errors when initializing a
	tty early rather than at random points later.
	* fhandler.h (fhandler_*::init): Return int to indicate
	success/failure.
	* fhandler.cc (fhandler_base::init): Reflect change in return value.
	* pipe.cc (fhandler_pipe::init): Ditto.
	(fhandler_pipe::create_selectable): Don't say we're retrying when we
	aren't.
	* fhandler_console.cc (fhandler_console::init): Ditto.  Return
	success/failure.
	* fhandler_serial.cc (fhandler_serial::init): Ditto.
	* fhandler_tty.cc (fhandler_tty_slave::init): Ditto.
	(fhandler_tty_slave::open): Make debugging output more detailed.
	* tty.cc (tty_list::terminate): Don't close I/O handles before all